--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -1,1 +1,9 @@
-
+parameters: 
+ level: max 
+ paths:
+  - /source/src 
+bootstrapFiles: 
+- phar:///pocketmine/PocketMine-MP.phar/vendor/autoload.php
+ scanDirectories:
+ - /source/src
+ - /deps
